src/components/ui/table/table-base.module.scss
.tableWrapper {
	position: relative;
	width: 100%;
	overflow: auto;
	padding-block: 20px;
	padding-inline: 2rem;
	border: 1px solid #213f7d0f;
	border-radius: 4px;
	box-shadow: 3px 5px 20px 0px #0000000a;
	margin-top: 40px;
}

.table {
	width: 100%;
	caption-side: bottom;
	font-size: 0.875rem;
}

.tableHeader {
	display: none;

	tr {
		background-color: transparent;
		font-weight: 600;
		text-transform: uppercase;
		border: none;

		&:hover {
			background: transparent;
			cursor: default;
		}
	}

	@media (min-width: 1024px) {
		display: table-header-group;
	}
}

.tableBody {
	margin-block: 2.5rem;

	tr:last-child {
		border: 0;
	}
}

.tableFooter {
	font-weight: 500;

	> tr:last-child {
		border-bottom: 0;
	}
}

.tableRow {
	transition: background-color 0.2s ease;
	border-bottom: 1px solid #213f7d1a;

	&:hover {
		background: #f5f5f5;
		cursor: pointer;
	}

	&[data-state="selected"] {
		background: var(--muted);
	}
}

.tableHead {
	height: 2.5rem;
	padding: 0.75rem 0.2rem;
	text-align: left;
	vertical-align: middle;
	white-space: nowrap;

	font-size: 12px;
	line-height: 0.75rem;
	font-weight: 600;
	color: #545f7d;
	* {
		background-color: white;
	}

	@media (min-width: 1024px) {
		font-size: 0.875rem;
		line-height: 18px;
		* {
			background-color: white;
		}
	}

	&:has([role="checkbox"]) {
		padding-right: 0;
	}

	> [role="checkbox"] {
		transform: translateY(2px);
	}
}

.tableCell {
	padding: 0.75rem 0.2rem;
	vertical-align: middle;
	white-space: nowrap;
	font-size: 16px;
	line-height: 1.25rem;
	color: #545f7d;
	* {
		background-color: white;
	}

	@media (min-width: 1024px) {
		height: 60px;
		font-size: 0.875rem;
	}

	&:has([role="checkbox"]) {
		padding-right: 0;
	}

	> [role="checkbox"] {
		transform: translateY(2px);
	}
}

.tableCaption {
	margin-top: 1rem;
	font-size: 0.875rem;
	color: var(--muted-foreground);
}

.tableEmpty {
	width: 100%;
	max-width: 293px;
	padding: 1rem;

	text-align: center;
	vertical-align: middle;
	white-space: nowrap;
	font-size: 0.875rem;
}

.tableEmptyContent {
	display: flex;
	align-items: center;
	justify-content: center;
	padding-block: 1.25rem;
}

